module(
    name = "glua_kit_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.55.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

bazel_dep(name = "glua_kit", version = "0.0.1")

# TODO: to be eventually removed
# The glua_kit module is not yet tracked in the Bazel registry, so we manually point to the Github repo.
# Otherwise, this shouldn't exist.
git_override(
    module_name = "glua_kit",
    commit = "74bcf87b47b69fb758ceebd5f39167a3530649c2",
    remote = "https://github.com/popovicu/glua-kit",
)